--- a/front/dockerfile
+++ b/front/dockerfile
@@ -1,6 +1,20 @@
-FROM node:14-alpine
+FROM node:14-alpine AS build
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
+
+RUN npm run build
+
+FROM node:14-alpine
+
+WORKDIR /app
+
+COPY --from=build /app/build ./build
+COPY package*.json ./
+RUN npm install --production
+
 CMD ["npm", "start"]
