--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-native": "^0.71.7",
     "react-native-web": "^0.19.4",
     "react-native-xml2js": "^1.0.3",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
