--- a/back/.gitignore
+++ b/back/.gitignore
@@ -12,3 +12,8 @@
 /.idea/
 /idea/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
