--- a/back/composer.json
+++ b/back/composer.json
@@ -10,7 +10,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
-        "nelmio/api-doc-bundle": "*",
+        "nelmio/api-doc-bundle": "^4.11",
         "nelmio/cors-bundle": "^2.3",
         "ramsey/uuid-doctrine": "^2.0",
         "symfony/asset": "6.2.*",
