--- a/front/package.json
+++ b/front/package.json
@@ -6,17 +6,22 @@
     "@blueprintjs/core": "^4.18.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.2",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mui/material": "^5.13.3",
+    "@mui/styled-engine": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.0",
     "cors-anywhere": "^0.4.4",
     "native-base": "^3.4.28",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.7",
     "react-native-web": "^0.19.4",
     "react-native-xml2js": "^1.0.3",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
